增加 observe、eventbus 及 App 增强逻辑

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wxa-utils",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "lijsh <sysulijs@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mitt": "^1.1.3",
+    "promisify-wxa": "0.0.9"
+  }
 }
