--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "wxa-utils",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-alpha.1",
   "description": "",
-  "main": "index.js",
+  "module": "dist/wxa.es.js",
+  "main": "dist/wxa.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "rollup": "rollup -c"
   },
   "keywords": [],
   "author": "lijsh <sysulijs@gmail.com>",
@@ -12,5 +14,11 @@
   "dependencies": {
     "mitt": "^1.1.3",
     "promisify-wxa": "0.0.9"
+  },
+  "devDependencies": {
+    "rollup": "^0.66.2",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-node-resolve": "^3.4.0"
   }
 }
