--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/omina.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "rollup": "rollup -c"
+    "rollup": "rollup -cw"
   },
   "keywords": [],
   "author": "lijsh <sysulijs@gmail.com>",
